change product price

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -99,7 +99,7 @@
               <div class="item-info">
                 <h3 class="item-name">آبمیوه طبیعی</h3>
                 <p class="price">
-                  50,000 <span class="price-postfix">تومان</span>
+                  60 <span class="price-postfix">افغانی</span>
                 </p>
               </div>
 
@@ -121,7 +121,7 @@
                 <div class="item-info">
                   <h3 class="item-name">لیموناد</h3>
                   <p class="price">
-                    45,000 <span class="price-postfix">تومان</span>
+                    40 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -144,7 +144,7 @@
                 <div class="item-info">
                   <h3 class="item-name">چای یخی</h3>
                   <p class="price">
-                    55,000 <span class="price-postfix">تومان</span>
+                    55 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -167,7 +167,7 @@
                 <div class="item-info">
                   <h3 class="item-name">لیموناد</h3>
                   <p class="price">
-                    45,000 <span class="price-postfix">تومان</span>
+                    40 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -194,7 +194,7 @@
               <div class="item-info">
                 <h3 class="item-name">آبمیوه طبیعی</h3>
                 <p class="price">
-                  50,000 <span class="price-postfix">تومان</span>
+                  50 <span class="price-postfix">افغانی</span>
                 </p>
               </div>
 
@@ -216,7 +216,7 @@
                 <div class="item-info">
                   <h3 class="item-name">لیموناد</h3>
                   <p class="price">
-                    45,000 <span class="price-postfix">تومان</span>
+                    40 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -239,7 +239,7 @@
                 <div class="item-info">
                   <h3 class="item-name">چای یخی</h3>
                   <p class="price">
-                    55,000 <span class="price-postfix">تومان</span>
+                    55 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -262,7 +262,7 @@
                 <div class="item-info">
                   <h3 class="item-name">لیموناد</h3>
                   <p class="price">
-                    45,000 <span class="price-postfix">تومان</span>
+                    40 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -289,7 +289,7 @@
               <div class="item-info">
                 <h3 class="item-name">آبمیوه طبیعی</h3>
                 <p class="price">
-                  50,000 <span class="price-postfix">تومان</span>
+                  50 <span class="price-postfix">افغانی</span>
                 </p>
               </div>
 
@@ -311,7 +311,7 @@
                 <div class="item-info">
                   <h3 class="item-name">لیموناد</h3>
                   <p class="price">
-                    45,000 <span class="price-postfix">تومان</span>
+                    40 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -334,7 +334,7 @@
                 <div class="item-info">
                   <h3 class="item-name">چای یخی</h3>
                   <p class="price">
-                    55,000 <span class="price-postfix">تومان</span>
+                    55 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -357,7 +357,7 @@
                 <div class="item-info">
                   <h3 class="item-name">لیموناد</h3>
                   <p class="price">
-                    45,000 <span class="price-postfix">تومان</span>
+                    40 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -388,7 +388,7 @@
               <div class="item-info">
                 <h3 class="item-name">آبمیوه طبیعی</h3>
                 <p class="price">
-                  50,000 <span class="price-postfix">تومان</span>
+                  50 <span class="price-postfix">افغانی</span>
                 </p>
               </div>
 
@@ -410,7 +410,7 @@
                 <div class="item-info">
                   <h3 class="item-name">لیموناد</h3>
                   <p class="price">
-                    45,000 <span class="price-postfix">تومان</span>
+                    40 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -433,7 +433,7 @@
                 <div class="item-info">
                   <h3 class="item-name">چای یخی</h3>
                   <p class="price">
-                    55,000 <span class="price-postfix">تومان</span>
+                    55 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -456,7 +456,7 @@
                 <div class="item-info">
                   <h3 class="item-name">لیموناد</h3>
                   <p class="price">
-                    45,000 <span class="price-postfix">تومان</span>
+                    40 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -484,7 +484,7 @@
               <div class="item-info">
                 <h3 class="item-name">آبمیوه طبیعی</h3>
                 <p class="price">
-                  50,000 <span class="price-postfix">تومان</span>
+                  50 <span class="price-postfix">افغانی</span>
                 </p>
               </div>
 
@@ -506,7 +506,7 @@
                 <div class="item-info">
                   <h3 class="item-name">لیموناد</h3>
                   <p class="price">
-                    45,000 <span class="price-postfix">تومان</span>
+                    40 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -529,7 +529,7 @@
                 <div class="item-info">
                   <h3 class="item-name">چای یخی</h3>
                   <p class="price">
-                    55,000 <span class="price-postfix">تومان</span>
+                    55 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -552,7 +552,7 @@
                 <div class="item-info">
                   <h3 class="item-name">لیموناد</h3>
                   <p class="price">
-                    45,000 <span class="price-postfix">تومان</span>
+                    40 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -580,7 +580,7 @@
               <div class="item-info">
                 <h3 class="item-name">آبمیوه طبیعی</h3>
                 <p class="price">
-                  50,000 <span class="price-postfix">تومان</span>
+                  50 <span class="price-postfix">افغانی</span>
                 </p>
               </div>
 
@@ -602,7 +602,7 @@
                 <div class="item-info">
                   <h3 class="item-name">چای یخی</h3>
                   <p class="price">
-                    55,000 <span class="price-postfix">تومان</span>
+                    55 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -625,7 +625,7 @@
                 <div class="item-info">
                   <h3 class="item-name">لیموناد</h3>
                   <p class="price">
-                    45,000 <span class="price-postfix">تومان</span>
+                    40 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -648,7 +648,7 @@
                 <div class="item-info">
                   <h3 class="item-name">لیموناد</h3>
                   <p class="price">
-                    45,000 <span class="price-postfix">تومان</span>
+                    40 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -675,7 +675,7 @@
               <div class="item-info">
                 <h3 class="item-name">آبمیوه طبیعی</h3>
                 <p class="price">
-                  50,000 <span class="price-postfix">تومان</span>
+                  50 <span class="price-postfix">افغانی</span>
                 </p>
               </div>
 
@@ -697,7 +697,7 @@
                 <div class="item-info">
                   <h3 class="item-name">لیموناد</h3>
                   <p class="price">
-                    45,000 <span class="price-postfix">تومان</span>
+                    40 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -720,7 +720,7 @@
                 <div class="item-info">
                   <h3 class="item-name">چای یخی</h3>
                   <p class="price">
-                    55,000 <span class="price-postfix">تومان</span>
+                    55 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
@@ -743,7 +743,7 @@
                 <div class="item-info">
                   <h3 class="item-name">لیموناد</h3>
                   <p class="price">
-                    45,000 <span class="price-postfix">تومان</span>
+                    40 <span class="price-postfix">افغانی</span>
                   </p>
                 </div>
               </div>
